Add lists & cards

--- a/package.json
+++ b/package.json
@@ -4,29 +4,29 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "@hapi/joi": "^16.1.7",
+    "@hapi/joi": "^16.1.8",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^5.7.7",
+    "mongoose": "^5.8.2",
     "morgan": "^1.9.1"
   },
   "devDependencies": {
-    "eslint": "^6.1.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.5.0",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^2.3.0",
     "jest": "^24.9.0",
-    "nodemon": "^1.19.4",
-    "prettier": "^1.18.2",
+    "nodemon": "^2.0.2",
+    "prettier": "^1.19.1",
     "supertest": "^4.0.2"
   },
   "scripts": {
-    "test": "jest --watchAll",
+    "test": "jest --watchAll tests/*.test.js --runInBand --verbose",
     "start": "nodemon server.js"
   },
   "author": "Mohammed",
